templates/verticadb-operator_template.yaml
---
# Source: verticadb-operator/templates/verticadb-operator-webhook-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: verticadb-operator
    vertica.com/svc-type: webhook
  name: verticadb-operator-webhook-service
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: verticadb-operator
---
# Source: verticadb-operator/templates/verticadb-operator-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: verticadb-operator
  name: verticadb-operator-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: verticadb-operator
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/name: verticadb-operator
        control-plane: verticadb-operator
    spec:
      containers:
      - command:
        - /manager
        image: 'docker.io/opentext/verticadb-operator:2.1.2'
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 750Mi
          requests:
            cpu: 100m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp
      securityContext:
        runAsNonRoot: true
      serviceAccountName: verticadb-operator-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: 10Mi
        name: tmp
---
# Source: verticadb-operator/templates/verticadb-operator-mutating-webhook-configuration-mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    {}
  name: verticadb-operator-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /mutate-vertica-com-v1-verticadb
  failurePolicy: Fail
  name: mverticadb.v1.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - verticadbs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /mutate-vertica-com-v1beta1-verticaautoscaler
  failurePolicy: Fail
  name: mverticaautoscaler.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - verticaautoscalers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /mutate-vertica-com-v1beta1-eventtrigger
  failurePolicy: Fail
  name: meventtrigger.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - eventtriggers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /mutate-vertica-com-v1beta1-verticarestorepointsquery
  failurePolicy: Fail
  name: mverticarestorepointsquery.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - verticarestorepointsqueries
  sideEffects: None
---
# Source: verticadb-operator/templates/verticadb-operator-validating-webhook-configuration-validatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    {}
  name: verticadb-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /validate-vertica-com-v1beta1-verticaautoscaler
  failurePolicy: Fail
  name: vverticaautoscaler.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - verticaautoscalers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /validate-vertica-com-v1-verticadb
  failurePolicy: Fail
  name: vverticadb.v1.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - verticadbs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /validate-vertica-com-v1beta1-eventtrigger
  failurePolicy: Fail
  name: veventtrigger.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - eventtriggers
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: verticadb-operator-webhook-service
      namespace: default
      path: /validate-vertica-com-v1beta1-verticarestorepointsquery
  failurePolicy: Fail
  name: vverticarestorepointsquery.kb.io
  rules:
  - apiGroups:
    - vertica.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - verticarestorepointsqueries
  sideEffects: None
